[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "time"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.91"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = "0.3.36"